# rust-saas-starter

./: .env.example  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  docker-compose.yml
.github/workflows/: coverage.yml
.sqlx/: query-16c08b7dfd8ddcb16a9a94df2234f260ea7556a74feab8f504b207555ef7596b.json  query-1a7a3332f6545ad9931fce4317ae4e13a87f6275a209d91fcc519c9ed7ffbf11.json  query-1b1270b8a4fd4e9a53aec232085b846c11536105f0c4934721760311e218fbf7.json  query-2def79e892336d643d536bc902d3dfd08598a1192abe018cae23d12c027a7321.json  query-3205273172738e1ad30ddf31a25e9ea5e8176fd48a15eb971969e808a697c54f.json  query-40288e8214b14efaa068a9234ef8eda5e5cbc343cbce47e8963667121cbb1d79.json  query-67453da8ccec47808bf33eac9b1a9e12b9d20ba641fd15a8e1b90a4917b9cfb0.json  query-92ae45c12da521d339edd3e32f21834cb211c11171136b8e88501ce1884fc8ce.json  query-aba0186e74a266f917007395ffab2c4c410f3371be65b188a226e9acc9ed4a37.json  query-add103478ccee584a94df131cd41732e1ce6cab15806563f2b89f086e09d4aee.json  query-d5516cbdc5f8b585c7712c12b70d4c064561e82fb26913f7103b071341f7ead7.json  query-f01102f6001340bbc432718712dd1251a6af2950d882aa81fa3947910819e34c.json
examples/: users.rs
migrations/: 20240817034823_create_users_table.sql  20240817034823_create_users_table.up.sql  20240817073829_add_timestamp_functions.sql  20240819040911_add_email_confirmation_fields.sql  20240820173014_add_change_email_columns_to_users.sql
src/lib/: domain.rs  infrastructure.rs  lib.rs
src/lib/domain/: auth.rs  comms.rs  communication.rs
src/lib/domain/auth/: emails.rs  errors.rs  models.rs  repositories.rs  services.rs  users.rs  value_objects.rs
src/lib/domain/comms/: errors.rs  mailer.rs  value_objects.rs
src/lib/domain/communication/: email_addresses.rs  errors.rs  mailer.rs
src/lib/infrastructure/: auth.rs  db.rs  email.rs  http.rs
src/lib/infrastructure/auth/: repositories.rs
src/lib/infrastructure/database/: postgres.rs
src/lib/infrastructure/db/: postgres.rs
src/lib/infrastructure/email/: smtp.rs
templates/auth/: email_confirmed.html
templates/emails/: base.html
templates/emails/auth/: confirm_email_address.html
templates/errors/: unprocessable.html
(+46 files in other folders)
